force-app/main/default/objects/Arrival_Checklist__c/Arrival_Checklist__c.object-meta.xml
<CustomObject>
    <label>Arrival Checklist</label>
    <nameField>
        <label>Stage</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Arrival Checklists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>