force-app/main/default/objects/Arrival_Checklist__c/fields/Actual_Completion_Time_Local__c.field-meta.xml
<CustomField>
    <fullName>Actual_Completion_Time_Local__c</fullName>
    <label>Completion Time</label>
    <type>Time</type>
</CustomField>