force-app/main/default/objects/Arrival_Checklist__c/fields/Actual_Planned_Completion_Time_UTC__c.field-meta.xml
<CustomField>
    <fullName>Actual_Planned_Completion_Time_UTC__c</fullName>
    <label>Actual Planned Completion Time(UTC)</label>
    <type>Time</type>
</CustomField>