force-app/main/default/objects/Arrival_Checklist__c/fields/Actual_Start_Time_Local__c.field-meta.xml
<CustomField>
    <fullName>Actual_Start_Time_Local__c</fullName>
    <label>Start Time</label>
    <type>Time</type>
</CustomField>