force-app/main/default/objects/Arrival_Checklist__c/fields/Actual_Start_Time_UTC__c.field-meta.xml
<CustomField>
    <fullName>Actual_Start_Time_UTC__c</fullName>
    <label>Actual Start Time(UTC)</label>
    <type>Time</type>
</CustomField>