force-app/main/default/objects/Arrival_Checklist__c/fields/Airport_Operation_ID__c.field-meta.xml
<CustomField>
    <fullName>Airport_Operation_ID__c</fullName>
    <label>Airport Operation ID</label>
    <referenceTo>Airport_Operation__c</referenceTo>
    <relationshipLabel>Arrival Checklists</relationshipLabel>
    <relationshipName>Arrival_Checklists</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>