force-app/main/default/objects/Arrival_Checklist__c/fields/Complete_on_Flight_Day__c.field-meta.xml
<CustomField>
    <fullName>Complete_on_Flight_Day__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Complete on Flight Day</label>
    <type>Checkbox</type>
</CustomField>