force-app/main/default/objects/Arrival_Checklist__c/fields/Division_Graphics__c.field-meta.xml
<CustomField>
    <fullName>Division_Graphics__c</fullName>
    <formula>CASE( Division__c ,
&quot;Acars&quot;, IMAGE( &quot;/sfc/servlet.shepherd/version/download/0686D0000007tkL&quot;,&quot;white&quot;),
&quot;CCS&quot;, IMAGE( &quot;/sfc/servlet.shepherd/version/download/0686D0000007tkQ&quot;,&quot;white&quot;),
&quot;CIQ&quot;, IMAGE( &quot;/sfc/servlet.shepherd/version/download/0686D0000007tkV&quot;,&quot;white&quot;),
&quot;GHD&quot;, IMAGE( &quot;/sfc/servlet.shepherd/version/download/0686D0000007tka&quot;,&quot;white&quot;),
&quot;GPS&quot;, IMAGE( &quot;/sfc/servlet.shepherd/version/download/0686D0000007tkf&quot;,&quot;white&quot;),
&quot;LCS&quot;, IMAGE( &quot;/sfc/servlet.shepherd/version/download/0686D0000007tkk&quot;,&quot;white&quot;),
&quot;LNF&quot;, IMAGE( &quot;/sfc/servlet.shepherd/version/download/0686D0000007tkp&quot;,&quot;white&quot;),
&quot;OPS+&quot;, IMAGE( &quot;/sfc/servlet.shepherd/version/download/0686D0000007tku&quot;,&quot;white&quot;),
&quot;ROS&quot;, IMAGE( &quot;/sfc/servlet.shepherd/version/download/0686D0000007tkz&quot;,&quot;white&quot;),
&quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Division</label>
    <type>Text</type>
</CustomField>