force-app/main/default/objects/Arrival_Checklist__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <formula>IF(!ISBLANK(Actual_Completion_Time_Local__c )&amp;&amp;!ISBLANK(Actual_Start_Time_Local__c),
IF(FLOOR(((Actual_Completion_Time_Local__c - Actual_Start_Time_Local__c)/1000)/ 3600)&lt;10,&quot;0&quot;,&quot;&quot;)&amp;
TEXT(FLOOR(((Actual_Completion_Time_Local__c - Actual_Start_Time_Local__c)/1000)/ 3600))
&amp;&apos;:&apos;&amp;
IF(FLOOR(MOD((((Actual_Completion_Time_Local__c - Actual_Start_Time_Local__c)/1000)/ 60),60))&lt;10,&quot;0&quot;,&quot;&quot;)&amp;
TEXT(FLOOR(MOD((((Actual_Completion_Time_Local__c - Actual_Start_Time_Local__c)/1000)/60) ,60)))
,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration</label>
    <type>Text</type>
</CustomField>