force-app/main/default/objects/Arrival_Checklist__c/fields/Estimated_Planned_Start_Time_Local__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Planned_Start_Time_Local__c</fullName>
    <label>Estimated Planned Start Time(Local)</label>
    <type>Time</type>
</CustomField>