force-app/main/default/objects/Arrival_Checklist__c/fields/Flight_Date_Local__c.field-meta.xml
<CustomField>
    <fullName>Flight_Date_Local__c</fullName>
    <label>Flight Date(Local)</label>
    <type>Date</type>
</CustomField>