force-app/main/default/objects/Arrival_Checklist__c/fields/List_Order__c.field-meta.xml
<CustomField>
    <fullName>List_Order__c</fullName>
    <label>List Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>