force-app/main/default/objects/Arrival_Checklist__c/fields/Plane_Location__c.field-meta.xml
<CustomField>
    <fullName>Plane_Location__c</fullName>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Plane_Location</valueSetName>
    </valueSet>
</CustomField>