force-app/main/default/objects/Arrival_Checklist__c/fields/Status_Check__c.field-meta.xml
<CustomField>
    <fullName>Status_Check__c</fullName>
    <formula>IF(
Actual_Completion_Time_Local__c &lt;= Actual_Planned_Completion_Time_Local__c &amp;&amp; NOT(ISBLANK(Actual_Completion_Time_Local__c)) , &quot;Completed&quot;,
IF
(
NOT ISBLANK(Actual_Start_Time_Local__c)&amp;&amp; ISBLANK(Actual_Completion_Time_Local__c) = TRUE, &quot;In Progress&quot;,
IF
(
(TODAY() = Flight_Date_Local__c &amp;&amp; TimeNow_Local_Time__c &gt; Actual_Planned_Completion_Time_Local__c &amp;&amp; ISBLANK(Actual_Completion_Time_Local__c) = TRUE) ||
(TODAY() &gt; Flight_Date_Local__c &amp;&amp; ISBLANK(Actual_Completion_Time_Local__c) = TRUE), &quot;Overdue&quot;, &quot;Not Started&quot;
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status(Check)</label>
    <type>Text</type>
</CustomField>