force-app/main/default/objects/Arrival_Checklist__c/fields/Status_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Status_Picklist__c</fullName>
    <label>Status Picklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Airport_Operation_Checklist_Status</valueSetName>
    </valueSet>
</CustomField>