force-app/main/default/objects/Arrival_Checklist__c/fields/Test__c.field-meta.xml
<CustomField>
    <fullName>Test__c</fullName>
    <formula>TEXT(Actual_Planned_Completion_Time_UTC__c) &amp; &quot; &quot; &amp; TEXT(TIMENOW())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test</label>
    <type>Text</type>
</CustomField>