force-app/main/default/objects/Arrival_Checklist__c/fields/Timenow__c.field-meta.xml
<CustomField>
    <fullName>Timenow__c</fullName>
    <formula>timenow()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Timenow()</label>
    <type>Time</type>
</CustomField>