force-app/main/default/objects/Arrival_Checklist__c/fields/TimeNow_Local_Time__c.field-meta.xml
<CustomField>
    <fullName>TimeNow_Local_Time__c</fullName>
    <formula>TIMENOW() + ( 3600000 * Timezone_Offset__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TimeNow(Local Time)</label>
    <type>Time</type>
</CustomField>