force-app/main/default/objects/Arrival_Checklist__c/fields/Timezone_Offset__c.field-meta.xml
<CustomField>
    <fullName>Timezone_Offset__c</fullName>
    <label>Timezone Offset</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>