force-app/main/default/objects/Arrival_Checklist__c/validationRules/Not_On_Flight_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Not_On_Flight_Date</fullName>
    <active>false</active>
    <description>Do not allow updating of checklist before flight date</description>
    <errorConditionFormula>(ISCHANGED(Complete_Now__c) &amp;&amp;
Complete_Now__c = TRUE &amp;&amp;
Action_on_Flight_Day__c = FALSE) ||
(ISCHANGED(Start_Now__c) &amp;&amp;
Start_Now__c = TRUE &amp;&amp;
Action_on_Flight_Day__c = FALSE)</errorConditionFormula>
    <errorMessage>Checklist cannot start or complete if flight date is not today</errorMessage>
</ValidationRule>